--- a/index.html
+++ b/index.html
@@ -1601,7 +1601,7 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
       },
 
 {
-        name: 'Monitores ',
+        name: 'Monitores - Servicio Técnico - Electromenor',
         wide: true,                 // <- hace la tarjeta de ancho completo
         body: `
 <x-carousel-card aspect="16/9" autoplay interval="8000">
