--- a/index.html
+++ b/index.html
@@ -1479,7 +1479,32 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
    `
 },
 
-   
+   {
+  name: ' Descargas – Boletines y Documentos',
+  body: `
+    <p>Selecciona el archivo que necesites descargar:</p>
+    <ul style="list-style:none; padding:0; margin:0;">
+      <li style="margin-bottom:6px;">
+        <a href="boletin_completo.pdf" download 
+           style="color:#60a5fa; text-decoration:none; font-weight:700;">
+          📄 Descargar Boletín Septiembre
+        </a>
+      </li>
+      <li style="margin-bottom:6px;">
+        <a href="boletin_octubre.pdf" download 
+           style="color:#60a5fa; text-decoration:none; font-weight:700;">
+          📄 Descargar Boletín Octubre
+        </a>
+      </li>
+      <li style="margin-bottom:6px;">
+        <a href="boletin_nov_ok.pdf" download 
+           style="color:#60a5fa; text-decoration:none; font-weight:700;">
+          📄 Descargar Boletín Noviembre
+        </a>
+      </li>
+    </ul>
+  `
+},   
  
 {
   name: 'IMPORTANTE - BOLETÍN CONTACT CENTER',
