--- a/index.html
+++ b/index.html
@@ -965,12 +965,7 @@ COLINEAL CORPORATION CIA LTDA`
  <img src="90CRVI.png" alt="Campana extractora CEI">`
 }, 
 
-      {
-  name: 'IMPACTO PROYECTO',
-  body: ` 
 
- <img src="  boletin_oct_1.jpg   " alt="Campana extractora CEI">`
-}, 
  
 
   {
@@ -1634,39 +1629,39 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
      
   </span>
 
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522253/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_2_ksiwbs.jpg " alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522253/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_1_ytkzjn.jpg " alt="Boletín 0">
-<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522253/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_5_zvvrt2.jpg" alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522253/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_3_kj3t5v.jpg " alt="Boletín 0">
-<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522254/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_6_u1jb3s.jpg" alt="Boletín 0">
-<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522254/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_7_gnozce.jpg" alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522254/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_4_mhv4hr.jpg " alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522254/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_8_hdhf7h.jpg " alt="Boletín 0">
-<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522255/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_9_kd3hhs.jpg" alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522257/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_10_b44zp4.jpg " alt="Boletín 0">
-<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522257/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_11_jphvc4.jpg" alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522257/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_12_zoxzdy.jpg " alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522258/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_13_fkmgke.jpg " alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522258/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_14_fglqj1.jpg " alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522259/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_16_gnbrwi.jpg " alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522259/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_15_wxo14l.jpg " alt="Boletín 0">
-<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522259/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_17_lstrrm.jpg" alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522260/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_18_gqep86.jpg " alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522261/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_19_xz9tuc.jpg " alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522262/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_22_f9p6n2.jpg " alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522262/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_21_mvqwqc.jpg " alt="Boletín 0">
-<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522261/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_20_ugfae9.jpg" alt="Boletín 0">
-<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522263/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_23_w06bqj.jpg" alt="Boletín 0">
-<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522263/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_24_w8yuou.jpg" alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522264/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_25_xvsbn6.jpg " alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522265/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_27_jqpucr.jpg " alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522264/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_26_sz3gfr.jpg " alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522266/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_30_p5essi.jpg " alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522266/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_28_h3jahv.jpg " alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522266/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_31_ryplrh.jpg " alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522267/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_32_ngmw0i.jpg " alt="Boletín 0">
-<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522265/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_29_vypitx.jpg" alt="Boletín 0">
-<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522267/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_33_as36e1.jpg " alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522253/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_2_ksiwbs.jpg " alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522253/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_1_ytkzjn.jpg " alt=" 0">
+<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522253/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_5_zvvrt2.jpg" alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522253/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_3_kj3t5v.jpg " alt=" 0">
+<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522254/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_6_u1jb3s.jpg" alt="0">
+<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522254/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_7_gnozce.jpg" alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522254/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_4_mhv4hr.jpg " alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522254/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_8_hdhf7h.jpg " alt=" 0">
+<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522255/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_9_kd3hhs.jpg" alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522257/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_10_b44zp4.jpg " alt=" 0">
+<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522257/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_11_jphvc4.jpg" alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522257/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_12_zoxzdy.jpg " alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522258/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_13_fkmgke.jpg " alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522258/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_14_fglqj1.jpg " alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522259/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_16_gnbrwi.jpg " alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522259/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_15_wxo14l.jpg " alt=" 0">
+<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522259/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_17_lstrrm.jpg" alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522260/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_18_gqep86.jpg " alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522261/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_19_xz9tuc.jpg " alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522262/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_22_f9p6n2.jpg " alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522262/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_21_mvqwqc.jpg " alt=" 0">
+<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522261/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_20_ugfae9.jpg" alt=" 0">
+<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522263/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_23_w06bqj.jpg" alt=" 0">
+<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522263/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_24_w8yuou.jpg" alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522264/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_25_xvsbn6.jpg " alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522265/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_27_jqpucr.jpg " alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522264/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_26_sz3gfr.jpg " alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522266/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_30_p5essi.jpg " alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522266/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_28_h3jahv.jpg " alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522266/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_31_ryplrh.jpg " alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522267/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_32_ngmw0i.jpg " alt=" 0">
+<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522265/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_29_vypitx.jpg" alt=" 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522267/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_33_as36e1.jpg " alt=" 0">
  
 
   
