--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ Indurama agradece su confianza. ¡Que tenga un excelente día!` },
 { name: 'Orden de instalación',
   body: `Gracias por la espera la orden de servicio técnico num: ___ ha sido generada. La fecha de visita es: ___ por favor estar pendiente a la llamada del técnico, quien se contactará en el transcurso del día de su visita.
 Recuerde presentar una copia de la factura y cédula, para validar la garantía.
-Agradecemos contar con todos los requisitos de instalación para garantizar una visita técnica efectiva y sin costo.
+Agradecemos contar con todos los requisitos de instalación para garantizar una visita técnica efectiva. 
 Gracias por comunicarse con Indurama, que tenga un excelente día.` },
 
 { name: 'Instalación foránea',
