--- a/index.html
+++ b/index.html
@@ -1777,15 +1777,15 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
     </a>
   </span>
 
-  <img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762526531/Instalaciones_11_25-im_%C3%ADgenes-0_pix32l.jpg " alt="Boletín 0">
-  <img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762526532/Instalaciones_11_25-im_%C3%ADgenes-1_va9elh.jpg " alt="Boletín 1">
-  <img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762526533/Instalaciones_11_25-im_%C3%ADgenes-4_ebv5z9.jpg" alt="Boletín 2">
-  <img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762526533/Instalaciones_11_25-im_%C3%ADgenes-2_fjh0fv.jpg " alt="Boletín 3">
-  <img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762526533/Instalaciones_11_25-im_%C3%ADgenes-3_yw19do.jpg " alt="Boletín 4">
-  <img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762526534/Instalaciones_11_25-im_%C3%ADgenes-6_u09vlw.jpg" alt="Boletín 5">
-  <img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762526533/Instalaciones_11_25-im_%C3%ADgenes-5_dh9csv.jpg " alt="Boletín 6">
-  <img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762526535/Instalaciones_11_25-im_%C3%ADgenes-7_szk6sy.jpg " alt="Boletín 7">
-  <img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762526536/Instalaciones_11_25-im_%C3%ADgenes-8_wdybpr.jpg " alt="Boletín 8">
+  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1763585380/19nov_1_ayy6lb.jpg " alt="Boletín 0">
+  <img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1763585380/19nov_2_sxwyag.jpg " alt="Boletín 1">
+  <img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1763585381/19nov_3_m1w6hk.jpg  " alt="Boletín 2">
+  <img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1763585381/19nov_4_z8xs31.jpg " alt="Boletín 3">
+  <img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1763585381/19nov_5_l7dyxp.jpg " alt="Boletín 4">
+  <img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1763585380/19nov_6_lfwkyo.jpg " alt="Boletín 5">
+  <img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1763585382/19nov_7_sc7zse.jpg " alt="Boletín 6">
+  <img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1763585382/19nov_8_vccbji.jpg " alt="Boletín 7">
+  <img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1763585382/19nov_9_eyk26w.jpg  " alt="Boletín 8">
   
 
   <span slot="caption">Desliza para ver todos los boletines.</span>
