--- a/index.html
+++ b/index.html
@@ -934,6 +934,14 @@ COLINEAL CORPORATION CIA LTDA`
   body: ' Período de garantía general: <strong>1 año</strong><br> <br>Instalación gratuita: <strong>Sí (una sola vez)</strong><br><br><strong>Adecuaciones y requerimientos de instalación:</strong><br><br><strong>IMPORTANTE:</strong> Si se requiere visita de inspección o asesoría técnica para evitar varias visitas, con el fin de comprobar condiciones de instalación y sugerir ajustes o preparación del área, esta se realizará con costo.<br><br>INSTALACIÓN ELÉCTRICA:<br>- Medidor eléctrico para 220V/50–60Hz y debe poseer conexión a tierra. (Realizado por un técnico calificado).<br>- Debe tener una conexión directa desde el medidor al producto con un breaker de 25 amperios.<br>- Tomacorriente tipo “G” (3 patas tipo chino) a máximo 1,20 m del artefacto (NEMA 6-15).<br><br>COLOCACIÓN:<br>- El mueble donde se instale el producto debe tener estructura firme, estable, soportar peso de 35 kg más el peso de carga y temperaturas de hasta 120°C.<br><br> <br><strong>Instalación no incluye:</strong><br>- Trabajos de albañilería o mampostería.<br>- Instalaciones eléctricas.'
 },
 
+      {
+  name: 'TOMACORRIENTE - 75EN - TIPO CHINO',
+  body: ` 
+
+ <img src=" 75ENOK.JPG" alt="Campana extractora CEI">`
+}, 
+
+  
 
 {
   name: 'ENCIMERAS INDUCCIÓN  EI-5PVI 5 FOCOS 90CM FR\nENCIMERA INDUCCIÓN EI-4PVI80D INDUCCIÓN 4 FOCOS DUO 80CM FR',
