--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@ COLINEAL CORPORATION CIA LTDA`
   name: 'TOMACORRIENTE - 75EN - TIPO CHINO',
   body: ` 
 
- <img src=" 75ENOK.JPG" alt="Campana extractora CEI">`
+ <img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1763656983/75ENOK_ic7p9t.jpg" alt="Campana extractora CEI">`
 }, 
 
   
