--- a/index.html
+++ b/index.html
@@ -522,6 +522,128 @@ Datos de contacto:
     '10003906 – SEC-20DGR\n-----------------------------------\n' +
     '10008622 – SEC-21FRC – APILABLE'
 },
+
+//OTRASMARCAS
+{
+  name: ' ECOLINE',
+  body: `
+NEV ECO 11P SD — 30000908
+NEV ECO 12P SD — 30000909
+NEV ECO 9P SD — 30001503
+`
+},
+ 
+{
+  name: 'MOTOROLA  ',
+  body: `
+TV Motorola 32 – 10027709
+TV Motorola 40 – 10012114
+TV Motorola 43 – 10027710
+TV Motorola 50 – 10027711
+TV Motorola 55 – 10027712
+TV Motorola 65 – 10027713
+TV Motorola 86 – 10027715
+  `
+},
+
+{
+  name: 'BLAUPUNKT',
+  body: `
+TV Blaupunkt 32  And  Tv 11 — 10027717
+TV Blaupunkt 43  And  Tv 11 — 10027718
+TV Blaupunkt 50  Google TV — 10027719
+TV Blaupunkt 55  Google TV — 10027720
+TV Blaupunkt 65  Google TV — 10027721
+TV Blaupunkt 32  Google TV — 10030937
+TV Blaupunkt 43  Google TV — 10030938
+  `
+},
+
+{
+  name: 'INNOVA',
+  body: `
+TV INNOVA 50" — 10032808
+TV INNOVA 55" — 10032809
+TV INNOVA 58" — 10032810
+TV INNOVA 65" — 10032811
+TV INNOVA 40" — 10035553
+VITRIN INN PARROT 1500   — 30000538
+VITRIN INN PARROT 1500   — 30000536
+VFV PARROT 1550   — 30000983
+VITRIN INN PARROT 1300  — 30000876
+VITRIN INN PARROT 1500  — 30000875
+REFRIG GLACIAR 309 CD  — 30001174
+REFRIG GLACIAR 370 CD  — 30001175
+  `
+},
+
+{
+  name: 'VIMEEL',
+  body: `
+TV LED VIMEEL VM-LED- 32" — 10032805
+TV LED VIMEEL VM-LED- 43" — 10032804
+TV LED VIMEEL VM-LED- 58" — 10032803
+TV VIMEEL VM-LED65G5UHD 65" — 10035554
+  `
+},
+
+{
+  name: 'MASTERTECH ',
+  body: `
+ Refrigeradora MTFF262ND5AS — 30001597
+Refrigeradora MTFF300ND5AS — 30001598
+Cocina MTG24FH44AS — 30001587
+Cocina MTG32FH64AS — 30001588
+TV MASTERTECH 32"   — 10033654
+TV MASTERTECH 40"   — 10035555
+TV MASTERTECH 43"   — 10033655
+TV MASTERTECH 50"   — 10033656
+TV MASTERTECH 55"   — 10033657
+TV MASTERTECH 65"   — 10033658
+  `
+},
+
+
+{
+  name: 'GLOBAL',
+  body: `
+REFRIGERADORA RG200NF BLANCO — 30000437
+REFRIGERADORA RG200NF STEEL — 30000769
+REFRIGERADORA RG90AFD BLANCO — 30000444
+  `
+},
+
+{
+  name: 'NAKAMICHI',
+  body: `
+NAKAMICHI TV 32"   — 10012094
+NAKAMICHI TV 40"   — 10012096
+NAKAMICHI TV 43"   — 10012099
+NAKAMICHI TV 50"   — 10012103
+NAKAMICHI TV 55"   — 10012108
+NAKAMICHI TV 65"   — 10012111
+NAKAMICHI TV 75"   — 10012112
+
+BARRA SONIDO NAKAMICHI NK311 — 10010799
+BARRA SONIDO NAKAMICHI TB306 — 10010800
+BARRA SONIDO NAKAMICHI NK-100AT — 10010801
+  `
+},
+
+{
+  name: 'PANEL INTERACTIVO',
+  body: `
+PANEL INTERACTIVO MAXHUB S75FA LED TOUCH ANDROID INHALAMBRICO WIFI, INTERL CORE i5, 8GB, SSD 128GB — 10030635
+PANEL INTERACTIVO MAXHUB S86FA LED TOUCH ANDROID INHALAMBRICO WIFI, INTERL CORE i5, 8GB, SSD 128GB — 10030636
+PANEL INTERACTIVO HORION 75M3A LED ANDROID 8.0 WINDOWS 10 CORE i5 — 10030637
+PANEL INTERACTIVO HORION 86M3A ANDROID 8.0 WINDOWS 10 CORE i5 — 10030638
+PANEL INTERACTIVO E-BOARD 65W11K-U UHD, 3840 x 2160 60Hz, LG PANEL, 450cd/m² — 10030639
+PANEL INTERACTIVO E-BOARD 86W11K UHD, 3840 x 2160 60Hz, LG PANEL, 450cd/m² — 10030640
+`
+},
+
+
+      
 //UTILITARIOS
 
 
