--- a/index.html
+++ b/index.html
@@ -395,9 +395,9 @@ Datos de contacto:
 
 { name: 'HORNOS',
   body:
-    '10000401 – HEI-75EN\n-----------------------------------\n' +
-    '10000400 – HEI-75GN\n-----------------------------------\n' +
-    '10000343 – HEI-75END\n-----------------------------------\n' +
+    '10000401 – HEI-75EN 
+    '10000400 – HEI-75GN 
+    '10000343 – HEI-75END 
     '10000402 – HEI-75ENDF'
 },
 
