--- a/index.html
+++ b/index.html
@@ -393,131 +393,150 @@ Datos de contacto:
 //codigossap
 
 
-
+{
+  name: 'HORNOS',
+  body: `
+10000401 – HEI-75EN
+10000400 – HEI-75GN
+10000343 – HEI-75END
+10000402 – HEI-75ENDF
+  `
+},
 
 {
   name: 'TELEVISORES',
-  body:
-    '10033945 – 32TIKGF5HD Google Tv 5.0\n-----------------------------------\n' +
-    '30001009 – 32TIKGF2HD Android 11.0\n-----------------------------------\n' +
-    '30000910 – 32TISE20AHD1\n-----------------------------------\n' +
-    '10027716 – 32TIKUHD Portatil Google TV\n-----------------------------------\n' +
-    '10027707 – 32TIKHD Google Tv\n-----------------------------------\n' +
-    '10012168 – 43TIKFCFHD\n-----------------------------------\n' +
-    '10012169 – 43TIKGFUHD4K\n-----------------------------------\n' +
-    '10021832 – 43TIKJUHD Google Tv\n-----------------------------------\n' +
-    '10020945 – 43TIKF9UHD Android 11.0\n-----------------------------------\n' +
-    '10020946 – 50TIKGF2UHD Android 11.0\n-----------------------------------\n' +
-    '10012170 – 50TIKGFUHD4K\n-----------------------------------\n' +
-    '10004053 – 50TISG3AUHD\n-----------------------------------\n' +
-    '10021833 – 50TIKGF2GUHD Google Tv\n-----------------------------------\n' +
-    '10004054 – 55TISG3AUHD\n-----------------------------------\n' +
-    '10036494 – 55TISG4FQLED Google Tv\n-----------------------------------\n' +
-    '10033823 – 65TIKGF5QLED Google Tv 5.0\n-----------------------------------\n' +
-    '10020951 – 65TISQ20UHD\n-----------------------------------\n' +
-    '30000944 – 58TISU20UHD1\n-----------------------------------\n' +
-    '10020947 – 58TIKGF2UHD Android 11.0\n-----------------------------------\n' +
-    '10012171 – 58TIKGFUHD4K\n-----------------------------------\n' +
-    '30001012 – 58TIKGFQLED'
+  body: `
+30000910 – 32TISE20AHD1
+30000944 – 58TISU20UHD1
+30001009 – 32TIKGF2HD Android 11.0
+30001012 – 58TIKGFQLED
+10004053 – 50TISG3AUHD
+10004054 – 55TISG3AUHD
+10012168 – 43TIKFCFHD
+10012169 – 43TIKGFUHD4K
+10012170 – 50TIKGFUHD4K
+10012171 – 58TIKGFUHD4K
+10020945 – 43TIKF9UHD Android 11.0
+10020946 – 50TIKGF2UHD Android 11.0
+10020947 – 58TIKGF2UHD Android 11.0
+10020951 – 65TISQ20UHD
+10021832 – 43TIKJUHD Google Tv
+10021833 – 50TIKGF2GUHD Google Tv
+10027707 – 32TIKHD Google Tv
+10027716 – 32TIKUHD Portatil Google TV
+10033823 – 65TIKGF5QLED Google Tv 5.0
+10033945 – 32TIKGF5HD Google Tv 5.0
+10036494 – 55TISG4FQLED Google Tv
+  `
 },
 
 {
   name: 'LAVADORAS',
-  body:
-    '10000385 – SEMIAUT LRI-13BLSA DOBLE TINA\n-----------------------------------\n' +
-    '10000302 – SEMIAUTOMATICA LRI-11BLSA\n-----------------------------------\n' +
-    '10000062 – SEMIAUTO LRI-15BLSA\n-----------------------------------\n' +
-    '10008600 – LRI-15DGR\n-----------------------------------\n' +   // ← agregado
-    '10030705 – AUTOMATICA LRI-16DGR\n-----------------------------------\n' +
-    '10000393 – AUTOMATICA LRI-16BLA\n-----------------------------------\n' +
-    '10000386 – AUTOMATICA LRI-19BLA\n-----------------------------------\n' +
-    '10026406 – AUTOMATICA LRI-19DGRI S01\n-----------------------------------\n' +
-    '10028469 – AUTOMATICA LRI-17DGR\n-----------------------------------\n' +
-    '10035872 – AUTOMÁTICA LRI-22DGR\n-----------------------------------\n' +
-    '10008621 – AUTOMATICA LRI-21FCR\n-----------------------------------\n' +
-    '10030930 – AUTOMATICA LRI-19CRPF\n-----------------------------------\n' +
-    '10030931 – AUTOMATICA LRI-21CRPF\n-----------------------------------\n' +
-    '10033203 – AUTOMÁTICA LRI-18CRPP\n-----------------------------------\n' +
-    '10033215 – AUTOMÁTICA LRI-22CRPP\n-----------------------------------\n' +
-    '10033216 – AUTOMÁTICA LRI-24CRPP'
+  body: `
+10000062 – SEMIAUTO LRI-15BLSA
+10000302 – SEMIAUTOMATICA LRI-11BLSA
+10000385 – SEMIAUT LRI-13BLSA DOBLE TINA
+10000386 – AUTOMATICA LRI-19BLA
+10000393 – AUTOMATICA LRI-16BLA
+10008600 – LRI-15DGR
+10008621 – AUTOMATICA LRI-21FCR
+10026406 – AUTOMATICA LRI-19DGRI S01
+10028469 – AUTOMATICA LRI-17DGR
+10030705 – AUTOMATICA LRI-16DGR
+10030930 – AUTOMATICA LRI-19CRPF
+10030931 – AUTOMATICA LRI-21CRPF
+10033203 – AUTOMÁTICA LRI-18CRPP
+10033215 – AUTOMÁTICA LRI-22CRPP
+10033216 – AUTOMÁTICA LRI-24CRPP
+10035872 – AUTOMÁTICA LRI-22DGR
+  `
 },
 
 
-{ name: 'CAMPANAS EXTRACTORAS',
-  body:
-    '10000024 – CAMPANA EXTRACTORA CEI-90CRP\n-----------------------------------\n' +
-    '10000030 – CAMPANA EXTRACTORA CEI-90CRVI\n-----------------------------------\n' +
-    '10000031 – CAMPANA EXTRACTORA CEI-90NEVC\n-----------------------------------\n' +
-    '10000032 – CAMPANA EXTRACTORA CEI-90NMO\n-----------------------------------\n' +
-    '10008500 – CAMPANA EXTRACTORA CEI-90CRVC\n-----------------------------------\n' +
-    '10000144 – CAMPANA EXTRACTORA CEI-75CRP\n-----------------------------------\n' +
-    '10000022 – CAMPANA EXTRACTORA CEI-60CRP CB TA'
+
+{
+  name: 'CAMPANAS EXTRACTORAS',
+  body: `
+10000022 – CAMPANA EXTRACTORA CEI-60CRP CB TA
+10000024 – CAMPANA EXTRACTORA CEI-90CRP
+10000030 – CAMPANA EXTRACTORA CEI-90CRVI
+10000031 – CAMPANA EXTRACTORA CEI-90NEVC
+10000032 – CAMPANA EXTRACTORA CEI-90NMO
+10000144 – CAMPANA EXTRACTORA CEI-75CRP
+10008500 – CAMPANA EXTRACTORA CEI-90CRVC
+  `
 },
 
-{ name: 'AIRE ACONDICIONADO',
-  body:
-    '10007693 – ASI-124A TIPO A\n-----------------------------------\n' +
-    '10007695 – ASI-124I TIPO A\n-----------------------------------\n' +
-    '10007695 – ASI-124I TIPO A\n-----------------------------------\n' +
-    '10007699 – ASI-244I TIPO A\n-----------------------------------\n' +
-    '10007697 – ASI-244A TIPO A\n-----------------------------------\n' +
-    '10026114 – ASI-125A TIPO A\n-----------------------------------\n' +
-    '10026115 – ASI-185A TIPO A\n-----------------------------------\n' +
-    '10026116 – ASI-365A TIPO A\n-----------------------------------\n' +
-    '10034533 – ASI-121I'
+{
+  name: 'AIRE ACONDICIONADO',
+  body: `
+10007693 – ASI-124A TIPO A
+10007695 – ASI-124I TIPO A
+10007697 – ASI-244A TIPO A
+10007699 – ASI-244I TIPO A
+10026114 – ASI-125A TIPO A
+10026115 – ASI-185A TIPO A
+10026116 – ASI-365A TIPO A
+10034533 – ASI-121I
+  `
 },
 
-{ name: 'ELECTROMENORES (1 de 2)',
-  body:
-    '10015039 – BARRA DE SONIDO SUB37\n-----------------------------------\n' +
-    '10026107 – PARLANTE CMI40\n-----------------------------------\n' +
-    '10026108 – PARLANTE CMI70\n-----------------------------------\n' +
-    '10026373 – SANDUCHERA PANINI\n-----------------------------------\n' +
-    '10026376 – ASPIRADORA 3 EN 1\n-----------------------------------\n' +
-    '10004071 – ROBOT ASPIRADORA INTELIGENTE IND RAI-420\n-----------------------------------\n' +
-    '10026371 – AIRFRYER AFI 4.5L NG\n-----------------------------------\n' +
-    '10000388 – CAFETERA CAF-BCI 12 TAZAS\n-----------------------------------\n' +
-    '10000019 – CAFETERA MCI-CR CON MOLINO\n-----------------------------------\n' +
-    '10008632 – DISPEN CARGA INFERIOR DAI-5GCI RENOV\n-----------------------------------\n' +
-    '10004979 – SANIT FRUT Y VERD IND SFV 11IND IMP BLAN\n-----------------------------------\n' +
-    '10000046 – EXTRACTOR EI-CR JUGO INDURAMA\n-----------------------------------\n' +
-    '10026370 – AIRFRYER AFI 8L NG\n-----------------------------------\n' +
-    '10026372 – AIRFRYER AFI 4.2L NG\n-----------------------------------\n' +
-    '10026377 – HORNO TOSTADOR 10L\n-----------------------------------\n' +
-    '10026375 – HORNO TOSTADOR DOBLE PUERTA AF 25L CR\n-----------------------------------\n' +
-    '10026374 – HORNO PARA PIZZA A LA PIEDRA'
+{
+  name: 'ELECTROMENORES (1 de 2)',
+  body: `
+10000019 – CAFETERA MCI-CR CON MOLINO
+10000046 – EXTRACTOR EI-CR JUGO INDURAMA
+10000388 – CAFETERA CAF-BCI 12 TAZAS
+10004071 – ROBOT ASPIRADORA INTELIGENTE IND RAI-420
+10004979 – SANIT FRUT Y VERD IND SFV 11IND IMP BLAN
+10008632 – DISPEN CARGA INFERIOR DAI-5GCI RENOV
+10015039 – BARRA DE SONIDO SUB37
+10026107 – PARLANTE CMI40
+10026108 – PARLANTE CMI70
+10026370 – AIRFRYER AFI 8L NG
+10026371 – AIRFRYER AFI 4.5L NG
+10026372 – AIRFRYER AFI 4.2L NG
+10026373 – SANDUCHERA PANINI
+10026374 – HORNO PARA PIZZA A LA PIEDRA
+10026375 – HORNO TOSTADOR DOBLE PUERTA AF 25L CR
+10026376 – ASPIRADORA 3 EN 1
+10026377 – HORNO TOSTADOR 10L
+`
 },
 
-{ name: 'ELECTROMENORES (2 de 2)',
-  body:
-    '10000064 – LICUADORA LI-CR LCD 1.5 L\n-----------------------------------\n' +
-    '10000390 – LICUADORA INOX LIC-PPC\n-----------------------------------\n' +
-    '10000066 – MICRO 20L MWI-20BL\n-----------------------------------\n' +
-    '10000067 – MICRO 20L MWI-20CR\n-----------------------------------\n' +
-    '10000070 – MICRO 30L MWI-30CR\n-----------------------------------\n' +
-    '10000352 – MICRO 30L MWI-30NE\n-----------------------------------\n' +
-    '10000354 – OLLA ARROCERA CROMA 1.8 LTS\n-----------------------------------\n' +
-    '10008660 – PLANCHA BASICA PLUS PI-280\n-----------------------------------\n' +
-    '10026113 – VENTILADOR 3 EN 1\n-----------------------------------\n' +
-    '10028858 – BATIDORA MANUAL IND IBMCR24 CR 200W\n-----------------------------------\n' +
-    '10028859 – BATIDORA DE INMERSIÓN IND IBINE24 NE 300\n-----------------------------------\n' +
-    '10028869 – WAFLERA DOBLE IND IWAFCR24 CR 700W\n-----------------------------------\n' +
-    '10028885 – EXPRIMIDOR CÍTRICO IND IEJCR24 CR 85W\n-----------------------------------\n' +
-    '10028886 – TOSTADORA IND ITSNE24 CR 750W\n-----------------------------------\n' +
-    '10028887 – ESPUMADOR IND IELNE24 NE 500ML\n-----------------------------------\n' +
-    '10028888 – SANDUCHERA IND ISNE24 NE 2P\n-----------------------------------\n' +
-    '10028889 – HERVIDOR DE AGUA IND IHCR24 CR 1.7L'
+{
+  name: 'ELECTROMENORES (2 de 2)',
+  body: `
+10000064 – LICUADORA LI-CR LCD 1.5 L
+10000066 – MICRO 20L MWI-20BL
+10000067 – MICRO 20L MWI-20CR
+10000070 – MICRO 30L MWI-30CR
+10000352 – MICRO 30L MWI-30NE
+10000354 – OLLA ARROCERA CROMA 1.8 LTS
+10000390 – LICUADORA INOX LIC-PPC
+10008660 – PLANCHA BASICA PLUS PI-280
+10026113 – VENTILADOR 3 EN 1
+10028858 – BATIDORA MANUAL IND IBMCR24 CR 200W
+10028859 – BATIDORA DE INMERSIÓN IND IBINE24 NE 300
+10028869 – WAFLERA DOBLE IND IWAFCR24 CR 700W
+10028885 – EXPRIMIDOR CÍTRICO IND IEJCR24 CR 85W
+10028886 – TOSTADORA IND ITSNE24 CR 750W
+10028887 – ESPUMADOR IND IELNE24 NE 500ML
+10028888 – SANDUCHERA IND ISNE24 NE 2P
+10028889 – HERVIDOR DE AGUA IND IHCR24 CR 1.7L
+`
 },
-
-      {
+ {
   name: 'SECADORAS',
-  body:
-    '10004981 – SEC-20BLA\n-----------------------------------\n' +
-    '10003906 – SEC-20DGR\n-----------------------------------\n' +
-    '10008622 – SEC-21FRC – APILABLE'
+  body: `
+10003906 – SEC-20DGR
+10004981 – SEC-20BLA
+10008622 – SEC-21FRC – APILABLE
+`
 },
 
-//OTRASMARCAS
+
+
 {
   name: ' ECOLINE',
   body: `
@@ -637,7 +656,9 @@ PANEL INTERACTIVO E-BOARD 86W11K UHD, 3840 x 2160 60Hz, LG PANEL, 450cd/m² — 
 },
 
 
-      
+
+
+
 //UTILITARIOS
 
 
