--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ h5 {
      href="  https://serviandinasaec-my.sharepoint.com/:x:/r/personal/comercial_indurama_consensocorp_com/_layouts/15/Doc.aspx?sourcedoc=%7B0CEDE323-2243-47D6-A3E4-1F4154666ACA%7D&file=Cuadro%20de%20garant%25u00edas.xlsx&action=default&mobileredirect=true " 
      target="_blank" 
      rel="noopener noreferrer">
-    CCUADRO DE GARANTÍAS
+    CUADRO DE GARANTÍAS
   </a>
 
 
@@ -237,7 +237,14 @@ h5 {
    <img src="https://flagcdn.com/w20/us.png" alt="US Flag" width="20" height="15" style="border-radius:3px;">
 </a>
 
-   
+   <a class="pill"
+   href="   https://serviandinasaec-my.sharepoint.com/:x:/r/personal/nnieves_indurama_com/_layouts/15/Doc.aspx?sourcedoc=%7B144AFE7B-5BDE-4AF0-B0DD-E420B6303CAF%7D&file=CONSOLIDADO%20CONTAC%20CENTER.xlsx&action=default&mobileredirect=true&DefaultItemOpen=1  "
+target="_blank"
+   style="display:flex; align-items:center; gap:6px;">
+   ZONAS PELIGROSAS
+   <img src="https://marketplace.canva.com/LWdKk/MAErOkLWdKk/1/tl/canva-red-danger-sign-MAErOkLWdKk.png" alt="US Flag" width="20" height="15" style="border-radius:3px;">
+</a>
+
 
 </div>
 
