--- a/index.html
+++ b/index.html
@@ -304,6 +304,10 @@ target="_blank"
 los valores por repuestos o mano de obra que nuestro técnico le indique en la visita.
 ¿Desea agendar la orden de servicio?` },
 
+{
+  name: 'Orden de atención – Seguridad gas',
+  body: `Estimado/a cliente: procedemos a generar una orden de atención para que un técnico de servicio lo visite. Mientras tanto, le solicitamos por favor ventilar el área y cerrar la llave del gas, por cuestiones de seguridad. Nuestro equipo se contactará con usted para coordinar la hora de visita.`
+},
 
 
 // CONTENIDO
